# DiffETL

./: pyproject.toml
diffetl/: config.py  utils.py
diffetl/extract/: _client.py  _raw.py  _repository.py  batch.py  client.py  repository.py
diffetl/extract/graphql/fragments/: actor.py  comments.py  git_refs.py  issue.py  pr.py  repository.py
diffetl/extract/graphql/queries/: issue.py  pr.py
diffetl/graphql/fragments/: actor.py  comments.py  git_refs.py  issue.py  pr.py  repository.py
diffetl/load/: pipeline.py
diffetl/transform/: _assessor.py  _diff.py  _enum.py  assessor.py  collections.py  commit.py  diff.py  file.py  groups.py  issue.py  pr.py
