[project]
name = "diffetl"
version = "0.1.0"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
  "E4", "E7", "E9",
  "F",
  "I",
  "B", 
  "A",
  "C4",
  "S",
]
ignore = ["F841", "C416"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"


[tool.ruff.format]
quote-style = "double" 
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"